// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditional.html - html-verify 1`] = `
<!DOCTYPE html>
<html>
  <body>

    <!--[if IE 5]>This is IE 5<br><![endif]-->
    <!--[if IE 6]>This is IE 6<br><![endif]-->
    <!--[if IE 7]>This is IE 7<br><![endif]-->
    <!--[if IE 8]>This is IE 8<br><![endif]-->
    <!--[if IE 9]>This is IE 9<br><![endif]-->

  </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <body>
    <!--[if IE 5]>This is IE 5<br /><![endif]-->
    <!--[if IE 6]>This is IE 6<br /><![endif]-->
    <!--[if IE 7]>This is IE 7<br /><![endif]-->
    <!--[if IE 8]>This is IE 8<br /><![endif]-->
    <!--[if IE 9]>This is IE 9<br /><![endif]-->
  </body>
</html>

`;

exports[`conditional.html - html-verify 2`] = `
<!DOCTYPE html>
<html>
  <body>

    <!--[if IE 5]>This is IE 5<br><![endif]-->
    <!--[if IE 6]>This is IE 6<br><![endif]-->
    <!--[if IE 7]>This is IE 7<br><![endif]-->
    <!--[if IE 8]>This is IE 8<br><![endif]-->
    <!--[if IE 9]>This is IE 9<br><![endif]-->

  </body>
</html>
~
<!DOCTYPE html>
<html>
  <body>
    <!--[if IE 5
      ]>This
      is
      IE
      5<br
    /><![endif]-->
    <!--[if IE 6
      ]>This
      is
      IE
      6<br
    /><![endif]-->
    <!--[if IE 7
      ]>This
      is
      IE
      7<br
    /><![endif]-->
    <!--[if IE 8
      ]>This
      is
      IE
      8<br
    /><![endif]-->
    <!--[if IE 9
      ]>This
      is
      IE
      9<br
    /><![endif]-->
  </body>
</html>

`;

exports[`for_debugging.html - html-verify 1`] = `
<!DOCTYPE html>
<html>
  <body>

<!-- Do not display this at the moment
<img border="0" src="pic_trulli.jpg" alt="Trulli">
-->

  <!-- Do not display this at the moment
  <img border="0" src="pic_trulli.jpg" alt="Trulli">
  -->

    <!-- Do not display this at the moment
    <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

  </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <body>
    <!--
      Do not display this at the moment
      <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

    <!--
      Do not display this at the moment
      <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

    <!--
      Do not display this at the moment
      <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->
  </body>
</html>

`;

exports[`for_debugging.html - html-verify 2`] = `
<!DOCTYPE html>
<html>
  <body>

<!-- Do not display this at the moment
<img border="0" src="pic_trulli.jpg" alt="Trulli">
-->

  <!-- Do not display this at the moment
  <img border="0" src="pic_trulli.jpg" alt="Trulli">
  -->

    <!-- Do not display this at the moment
    <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

  </body>
</html>
~
<!DOCTYPE html>
<html>
  <body>
    <!--
      Do not display this at the moment
      <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

    <!--
      Do not display this at the moment
      <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->

    <!--
      Do not display this at the moment
      <img border="0" src="pic_trulli.jpg" alt="Trulli">
    -->
  </body>
</html>

`;

exports[`hidden.html - html-verify 1`] = `
<!DOCTYPE html>
<html>
    <body>

        <!--This is a comment-->
        <!-- This is a comment -->
        <!--  This is a comment  -->
        <!--   This   is   a   comment   -->
        <p>This is a paragraph.</p>
        <!-- Comments are not displayed in the browser -->

    </body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!DOCTYPE html>
<html>
  <body>
    <!-- This is a comment -->
    <!-- This is a comment -->
    <!-- This is a comment -->
    <!-- This   is   a   comment -->
    <p>This is a paragraph.</p>
    <!-- Comments are not displayed in the browser -->
  </body>
</html>

`;

exports[`hidden.html - html-verify 2`] = `
<!DOCTYPE html>
<html>
    <body>

        <!--This is a comment-->
        <!-- This is a comment -->
        <!--  This is a comment  -->
        <!--   This   is   a   comment   -->
        <p>This is a paragraph.</p>
        <!-- Comments are not displayed in the browser -->

    </body>
</html>
~
<!DOCTYPE html>
<html>
  <body>
    <!--
      This is a comment
    -->
    <!--
      This is a comment
    -->
    <!--
      This is a comment
    -->
    <!--
      This   is   a   comment
    -->
    <p>
      This
      is
      a
      paragraph.
    </p>
    <!--
      Comments are not displayed in the browser
    -->
  </body>
</html>

`;

exports[`surrounding-empty-line.html - html-verify 1`] = `
<ul><!-- 123
--><li>First</li><!-- 123
456
   789
--><li>Second</li><!--


    123
       456
          789


--><li>Second</li><!--


           123
        456
    789


--></ul>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<ul>
  <!-- 123
  --><li>First</li
  ><!--
    123
    456
       789
  --><li>Second</li
  ><!--
    123
       456
          789
  --><li>Second</li
  ><!--
           123
        456
    789
  -->
</ul>

`;

exports[`surrounding-empty-line.html - html-verify 2`] = `
<ul><!-- 123
--><li>First</li><!-- 123
456
   789
--><li>Second</li><!--


    123
       456
          789


--><li>Second</li><!--


           123
        456
    789


--></ul>
~
<ul>
  <!--
    123
  --><li
    >First</li
  ><!--
    123
    456
       789
  --><li
    >Second</li
  ><!--
    123
       456
          789
  --><li
    >Second</li
  ><!--
           123
        456
    789
  -->
</ul>

`;
